--- a/appspec.yml
+++ b/appspec.yml
@@ -30,10 +30,10 @@ permissions:
     mode: 775
     type:
       - directory
-# 3) For all files at any level under /home/ubuntu/pybossa/
+# 3) For all files at any level under /home/ubuntu/pybossa/pybossa
 # except pre_install and post_install scripts
 #  owner = ubuntu, group = ubuntu and mode = 664 (-rw-rw-r--).
-  - object: /home/ubuntu/pybossa/08122016
+  - object: /home/ubuntu/pybossa/pybossa
     except: [pre_install, post_install]
     owner: ubuntu
     group: ubuntu
